2011-09-23  Marcus Bulach  <bulach@chromium.org>

        [chromium] Update expectation for pservers-grad-14-b.svg on snowleopard
        https://bugs.webkit.org/show_bug.cgi?id=68697

        Unreviewed rebaseline.

        * platform/chromium/test_expectations.txt:

2011-09-23  Yael Aharon  <yael.aharon@nokia.com>

        [Qt][Gtk] Wrong state when pausing a video in the "playing" event handler
        https://bugs.webkit.org/show_bug.cgi?id=68589

        Reviewed by Philippe Normand.

        * media/video-playing-and-pause.html: Added.
        * media/video-paint-test.js:
        * platform/qt/media/video-playing-and-pause-expected.txt: Added.
        * platform/qt/media/video-playing-and-pause-expected.png: Added.

2011-09-23  Marcus Bulach  <bulach@chromium.org>

        [chromium, gtk, qt] Rebaseline following r95726
        https://bugs.webkit.org/show_bug.cgi?id=68694

        Unreviewed rebaseline.

        * css2.1/20110323/abspos-non-replaced-width-margin-000-expected.txt: Renamed from LayoutTests/platform/gtk/css2.1/20110323/abspos-non-replaced-width-margin-000-expected.txt.
        * css2.1/20110323/abspos-replaced-width-margin-000-expected.txt: Renamed from LayoutTests/platform/gtk/css2.1/20110323/abspos-replaced-width-margin-000-expected.txt.
        * platform/chromium/css2.1/20110323/abspos-non-replaced-width-margin-000-expected.png: Added.
        * platform/chromium/css2.1/20110323/abspos-replaced-width-margin-000-expected.png: Added.
        * platform/qt/css2.1/20110323/abspos-non-replaced-width-margin-000-expected.txt: Removed.
        * platform/qt/css2.1/20110323/abspos-replaced-width-margin-000-expected.txt: Removed.

2011-09-15  Pavel Podivilov  <podivilov@chromium.org>

        Web Inspector: skip overlapping scripts when displaying concatenated content.
        https://bugs.webkit.org/show_bug.cgi?id=68144

        Reviewed by Pavel Feldman.

        * inspector/debugger/content-providers-expected.txt: