@@ -1,0 +1,6 @@
+CONSOLE MESSAGE: line 13: Done.
+Tests that XHRs with the same url as a main resource have correct category.
+
+Bug 68648
+xhr
+
