@@ -1,5 +1,17 @@
 2011-09-23  Vsevolod Vlasov  <vsevik@chromium.org>
 
+        Web Inspector: XHRs requests with the same url as main resource should have correct category.
+        https://bugs.webkit.org/show_bug.cgi?id=68646
+
+        Reviewed by Yury Semikhatsky.
+
+        Test: http/tests/inspector/network/network-xhr-same-url-as-main-resource.html
+
+        * inspector/InspectorResourceAgent.cpp:
+        (WebCore::InspectorResourceAgent::didReceiveResponse):
+
+2011-09-23  Vsevolod Vlasov  <vsevik@chromium.org>
+
         Web Inspector: Add context menu action to navigate from resources panel resource to network panel.
         https://bugs.webkit.org/show_bug.cgi?id=68657
 
